--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<h1>Bastien Chappis</h1>
 			<h2>Digital Marketing | Data Science</h2>
-			<a href="#" class="btn-blue" id="btn-header">Visit the profile</a>
+			<a href="#" class="btn-blue" id="btn-header"><i class="fab fa-linkedin"></i></i> Profile</a>
 		</div>
 	</div>
 
@@ -48,9 +48,11 @@
 		<h2>Summary</h2>
 
 		<div class="cards">
-			<p>Lorem ipsum dolor sit amet, ei aeque interpretaris pri, inermis erroribus dissentiunt eu cum, idque omnes insolens cu eam. Ea pro case verterem democritum, argumentum ullamcorper et nec. Nostro noluisse at per. Nam in inani theophrastus, vis eu error melius molestie. Ea mel magna illum epicurei. Pro at prima intellegam, eu iusto aliquando duo.</p>
+			<p>I’m currently a student in the Master of Digital Marketing and Data-Science at EM Lyon. Before joining this master, I first graduated in biology at University of Grenoble. During this license, my results allowed me to study six months at the prestigious National University of Singapore. </p>
+			<p>I then joined the international master of neuroscience at the University of Bordeaux. I seized the opportunity to put my skills into practice during the numerous internships I realized. </p> 
+			<p>My academic career has always been based on the observation, the analysis and the resolution of a given problem, wether it is linked to scientific research, or more recently to business cases.</p>
 			<div class="card">
-				<img src="images/bastien.png">
+				<img src="images/profile_bastien.gif">
 				<h3>to know more about me</h3>
 				<a class = "btn-blue" href="download/CV_Bastien_Chappis.pdf" target="_blank"><i class="fa fa-download"></i>  Resume</a>
 			</div>
@@ -127,16 +129,45 @@
 		</div>
 	</div>
 
-
-
-
 	<div class="container" id="experiences"> 			
 		<h2>Experiences</h2>
 		<div class="cards">
-
 			<div class="card">
-				<img src="images/univ_grenoble.png">
-				<h3>Visit my profile</h3>
+				<img src="images/experiences_01.png">
+				<h3>Xnode accelerator - Shanghai (China)</h3>
+				<p>April 2019 - Present</p>
+				<a class = "btn-blue" href="#">Website</a>
+			</div>
+		</div>
+		<div class="cards">
+			<div class="card">
+				<img src="images/experiences_02.png">
+				<h3>Lionbridge company - Bordeaux (France)</h3>
+				<p>Feb 2018 - Nov 2019</p>
+				<a class = "btn-blue" href="#">Website</a>
+			</div>
+		</div>
+		<div class="cards">
+			<div class="card">
+				<img src="images/experiences_04.png">
+				<h3>Neurocentre Magendie - Bordeaux (France)</h3>
+				<p>Jan 2018 - June 2018</p>
+				<a class = "btn-blue" href="#">Website</a>
+			</div>
+		</div>
+		<div class="cards">
+			<div class="card">
+				<img src="images/experiences_04.png">
+				<h3>Neurocentre Magendie - Bordeaux (France)</h3>
+				<p>May 2017 - Augt 2017</p>
+				<a class = "btn-blue" href="#">Website</a>
+			</div>
+		</div>
+		<div class="cards">
+			<div class="card">
+				<img src="images/experiences_03.png">
+				<h3>Grenoble institue of neuroscience - Grenoble (France)</h3>
+				<p>june 2015 - Aug 2015</p>
 				<a class = "btn-blue" href="#">Website</a>
 			</div>
 		</div>
@@ -179,13 +210,13 @@
 		<div class="profile">
 
 			<div class="card-profile">
-				<img src="images/veronique.png">
+				<img src="images/profile_veronique.gif">
 					<h3>Veronique Deroche-Gamonet</h3>
 					<p>Psychobiology of drug addiction team-leader </p>	
 				<a class = "btn-blue" href="https://neurocentre-magendie.fr/recherche/Deroche/descriptionTeam.php" target="_blank">Profile</a>
 			</div>
 			<div class="card-profile">
-				<img src="images/andreas.png">
+				<img src="images/profile_andreas.gif">
 				<h3>Andreas Frick</h3>
 				<p>Cortical plasticity team-leader</p>
 				<a class = "btn-blue" href="https://neurocentre-magendie.fr/recherche/Frick/descriptionTeam.php" target="_blank">Profile</a>
