--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		<div class="cards">
 			<p>I’m currently a student in the Master of Digital Marketing and Data-Science at EM Lyon. Before joining this master, I first graduated in biology at University of Grenoble. During this license, my results allowed me to study six months at the prestigious National University of Singapore. </p>
-			<p>I then joined the international master of neuroscience at the University of Bordeaux. I seized the opportunity to put my skills into practice during the numerous internships I realized. </p> 
+			<p>I then joined the international master of neuroscience of the University of Bordeaux. I seized the opportunity to put my skills into practice during the numerous internships I did. </p> 
 			<p>My academic career has always been based on the observation, the analysis and the resolution of a given problem, wether it is linked to scientific research, or more recently to business cases.</p>
 			<div class="card">
 				<img src="images/profile_bastien.gif">
