follow me section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class="container">
 			<h1>Bastien Chappis</h1>
 			<h2>Digital Marketing | Data Science</h2>
-			<a href="#" class="btn-blue" id="btn-header"><i class="fab fa-linkedin"></i></i> Profile</a>
+			<a href="#" class="btn-redish" id="btn-header"><i class="fab fa-linkedin"></i></i> Profile</a>
 		</div>
 	</div>
 
@@ -54,13 +54,13 @@
 			<div class="card">
 				<img src="images/profile_bastien.gif">
 				<h3>to know more about me</h3>
-				<a class = "btn-blue" href="download/CV_Bastien_Chappis.pdf" target="_blank"><i class="fa fa-download"></i>  Resume</a>
+				<a class = "btn-redish" href="download/CV_Bastien_Chappis.pdf" target="_blank"><i class="fa fa-download"></i>  Resume</a>
 			</div>
 		</div>
 	</div>
 
 
-	<div class="services" id="services">
+	<div class="black-box" id="services">
 		<div class="container">
 			<h2>Services</h2>
 			<p>Here is a list of the projects I worked for during the past year.</p>
@@ -135,8 +135,7 @@
 			<div class="card">
 				<img src="images/experiences_01.png">
 				<h3>Xnode accelerator - Shanghai (China)</h3>
-				<p>April 2019 - Present</p>
-				<a class = "btn-blue" href="#">Website</a>
+				<p>Apr 2019 - Present</p>
 			</div>
 		</div>
 		<div class="cards">
@@ -144,7 +143,6 @@
 				<img src="images/experiences_02.png">
 				<h3>Lionbridge company - Bordeaux (France)</h3>
 				<p>Feb 2018 - Nov 2019</p>
-				<a class = "btn-blue" href="#">Website</a>
 			</div>
 		</div>
 		<div class="cards">
@@ -152,23 +150,20 @@
 				<img src="images/experiences_04.png">
 				<h3>Neurocentre Magendie - Bordeaux (France)</h3>
 				<p>Jan 2018 - June 2018</p>
-				<a class = "btn-blue" href="#">Website</a>
 			</div>
 		</div>
 		<div class="cards">
 			<div class="card">
 				<img src="images/experiences_04.png">
 				<h3>Neurocentre Magendie - Bordeaux (France)</h3>
-				<p>May 2017 - Augt 2017</p>
-				<a class = "btn-blue" href="#">Website</a>
+				<p>May 2017 - Aug 2017</p>
 			</div>
 		</div>
 		<div class="cards">
 			<div class="card">
 				<img src="images/experiences_03.png">
 				<h3>Grenoble institue of neuroscience - Grenoble (France)</h3>
-				<p>june 2015 - Aug 2015</p>
-				<a class = "btn-blue" href="#">Website</a>
+				<p>June 2015 - Aug 2015</p>
 			</div>
 		</div>
 	</div>
@@ -213,15 +208,33 @@
 				<img src="images/profile_veronique.gif">
 					<h3>Veronique Deroche-Gamonet</h3>
 					<p>Psychobiology of drug addiction team-leader </p>	
-				<a class = "btn-blue" href="https://neurocentre-magendie.fr/recherche/Deroche/descriptionTeam.php" target="_blank">Profile</a>
+				<a class = "btn-redish" href="https://neurocentre-magendie.fr/recherche/Deroche/descriptionTeam.php" target="_blank">Profile</a>
 			</div>
 			<div class="card-profile">
 				<img src="images/profile_andreas.gif">
 				<h3>Andreas Frick</h3>
 				<p>Cortical plasticity team-leader</p>
-				<a class = "btn-blue" href="https://neurocentre-magendie.fr/recherche/Frick/descriptionTeam.php" target="_blank">Profile</a>
+				<a class = "btn-redish" href="https://neurocentre-magendie.fr/recherche/Frick/descriptionTeam.php" target="_blank">Profile</a>
 			</div>
 		</div>
+	</div>
+	<div class="black-box" id="follow-me">
+		<div class="container">
+			<ul class="list-inline">
+				<li><a href="https://fr.linkedin.com/in/bastienchappis" target="_blank">
+					<i class="fab fa-linkedin"></i>
+				</a>
+				</li>
+				<li><a href="https://github.com/bastienchappis" target="_blank">
+					<i class="fab fa-github-alt"></i>
+				</a>
+				</li>
+				<li><a href="https://www.tableau.com/fr-fr" target="_blank">
+					<i class="fas fa-plus"></i>
+				</a>
+				</li>
+			</ul>
+		</div> 
 	</div>
 
 </body>
