--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
  <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126636445-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-126636445-2');
+	</script>
+
 	<title>Bastien Chappis Portfolio</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -219,7 +229,6 @@
 		</div>
 	</div>
 	</div>
-	
 	<div class="black-box" id="follow-me">
 		<div class="container">
 			<ul class="list-inline">
@@ -238,7 +247,7 @@
 			</ul>
 		</div> 
 		<div class="typeform-widget" data-url="https://bastienchappis.typeform.com/to/XUmZTJ" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=XUmZTJ&utm_source=typeform.com-14058147-Basic&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
-	
+
 
 </body>
 </html>
