--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 		<h2>Summary</h2>
 
 		<div class="cards">
-			<p>I’m currently a student in the Master of Digital Marketing and Data-Science at EM Lyon. Before joining this master, I first graduated in biology at University of Grenoble. During this license, my results allowed me to study six months at the prestigious National University of Singapore. </p>
-			<p>I then joined the international master of neuroscience of the University of Bordeaux. I seized the opportunity to put my skills into practice during the numerous internships I did. </p> 
-			<p>My academic career has always been based on the observation, the analysis and the resolution of a given problem, wether it is linked to scientific research, or more recently to business cases.</p>
+			<p>I’m currently a student in the Master of Digital Marketing and Data-Science at EM Lyon. Before joining this, I’ve studded the international master of neuroscience of the University of Bordeaux. I seized the opportunity to put my skills into practice during the numerous internships I did.</p>
+			<p>I first graduated in biology at University of Grenoble. During this license, my results allowed me to study six months at the prestigious National University of Singapore.</p>
+			<p>My academic career has always been based on observation, the analysis and problems resolution, whether it is linked to scientific research, or more recently to business cases.</p>
+			<p>To know more about my experience, download my resume just below.</p>
 			<div class="card">
 				<img src="images/profile_bastien.gif">
 				<h3>to know more about me</h3>
@@ -152,7 +153,7 @@
 			<div class="card">
 				<img src="images/experiences_02.png">
 				<h3>Lionbridge company - Bordeaux (France)</h3>
-				<p>Feb 2018 - Nov 2019</p>
+				<p>Feb 2018 - Nov 2018</p>
 			</div>
 		</div>
 		<div class="cards">
