--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="card">
 				<img src="images/profile_bastien.gif">
 				<h3>to know more about me</h3>
-				<a class = "btn-redish" href="download/CV_Bastien_Chappis.pdf" target="_blank"><i class="fa fa-download"></i>  Resume</a>
+				<a class = "btn-redish" href="download/CV_Bastien_Chappis.pdf" target="_blank"><i class="fa fa-download"></i>  Resume.pdf</a>
 			</div>
 		</div>
 	</div>
