new page for linkedin

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="container">
 			<h1>Bastien Chappis</h1>
 			<h2>Digital Marketing | Data Science</h2>
-			<a href="https://fr.linkedin.com/in/bastienchappis" class="btn-redish" id="btn-header"><i class="fab fa-linkedin"></i></i> Profile</a>
+			<a href="https://fr.linkedin.com/in/bastienchappis" class="btn-redish" id="btn-header" target="_blank"><i class="fab fa-linkedin"></i></i> Profile</a>
 		</div>
 	</div>
 
