--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
 		<h2>References</h2>
 		<div class="profile">
 
-			<div class="card-profile">
+			<div class="card">
 				<img src="images/profile_veronique.gif">
 					<h3>Veronique Deroche-Gamonet</h3>
 					<p>Psychobiology of drug addiction team-leader </p>	
 				<a class = "btn-redish" href="https://neurocentre-magendie.fr/recherche/Deroche/descriptionTeam.php" target="_blank">Profile</a>
 			</div>
-			<div class="card-profile">
+			<div class="card">
 				<img src="images/profile_andreas.gif">
 				<h3>Andreas Frick</h3>
 				<p>Cortical plasticity team-leader</p>
