--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				</a>	
 			</div>
 			<div class="s-card">
-				<a href="#">
+				<a href="consulting_page.html">
 					<div class="s-card-image">
 						<img src="images/icons_services_2.gif">
 					</div>
