--- a/consulting_page.html
+++ b/consulting_page.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'UA-126636445-2');
 	</script>
-
+	<script>
 	    (function(h,o,t,j,a,r){
 	        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
 	        h._hjSettings={hjid:1352162,hjsv:6};
@@ -54,10 +54,10 @@
 		</nav>
 	</div>
 
-	<div class="banner">
+	<div class="banner" id="consulting-banner">
 		<div class="container">
 			<h1>Consulting</h1>
-			<h2>XNode accelerator innovation metrics </h2>
+			<h2>XNode accelerator's innovation metrics </h2>
 		</div>
 	</div>
 
