--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<div class="black-box" id="services">
 		<div class="container">
 			<h2>Services</h2>
-			<p>Here is a list of the projects I worked for during the past year.</p>
+			<p>Discover my porjects !</p>
 		</div> 
 		<div class="justify">
 			<div class="s-card">
