--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		<h2>Summary</h2>
 
 		<div class="cards">
-			<p>I’m currently a student in the Master of <b>Digital Marketing and Data-Science at EM Lyon.</b> Before joining this, I’ve studded the <b>international master of neuroscience</b> of the University of Bordeaux. I seized the opportunity to put my skills into practice during the numerous internships I did.
-			I first graduated in biology at University of Grenoble. During this license, my results allowed me to study six months at the prestigious National University of Singapore.</p>
+			<p>I’m currently a student in the Master of <b>Digital Marketing and Data-Science at EM Lyon.</b> Before joining this, I did the <b>international master of neuroscience</b> program of the University of Bordeaux. I  put my skills into practice during my several internships.
+			I first graduated in biology at University of Grenoble, during which I left for six months to study at the National University of Singapore.</p>
 			<p>My academic career has always been based on <b>observation</b>, the <b>analysis</b> and <b>problems resolution</b>, whether it is linked to scientific research, or more recently to business cases.</p>
 			<p>To know more about my experience, download my resume just below.</p>
 			<div class="card">
@@ -119,7 +119,7 @@
 					</div>
 					<div class="s-card-body">
 							<h3>Data Visualization</h3>
-							<p>Data analysis using <b>R, Python, and SQL.</b> Visualization and presentation via dashboard creation using <b>PowerBI, Tableau and Excel.</b></p>
+							<p>Data analysis using <b>R, Python, and SQL.</b> Visualization and presentation via dashboarding using <b>PowerBI, Tableau and Excel.</b></p>
 						
 					</div>
 				</a>	
@@ -131,7 +131,7 @@
 					</div>
 					<div class="s-card-body">
 							<h3>UX | UI</h3>
-							<p>Development of valuable experience in accordance with customer's needs. <b>Prototyping online app and physical place</b> while taking into account the customer journey.</p>
+							<p>Development of valuable experience regarding customer's needs. <b>Prototyping online app and physical place</b> while taking into account the customer journey.</p>
 						
 					</div>
 				</a>	
