--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div class="cards">
 			<p>I’m currently a student in the Master of <b>Digital Marketing and Data-Science at EM Lyon.</b> Before joining this, I did the <b>international master of neuroscience</b> program of the University of Bordeaux. I  put my skills into practice during my several internships.
 			I first graduated in biology at University of Grenoble, during which I left for six months to study at the National University of Singapore.</p>
-			<p>My academic career has always been based on <b>observation</b>, the <b>analysis</b> and <b>problems resolution</b>, whether it is linked to scientific research, or more recently to business cases.</p>
+			<p>My academic career has always been based on <b>observation</b>, the <b>analysis</b> and <b>problem resolution</b>, whether it is linked to scientific research, or more recently to business cases.</p>
 			<p>To know more about my experience, download my resume just below.</p>
 			<div class="card">
 				<img src="images/profile_bastien.gif">
@@ -85,7 +85,7 @@
 	<div class="black-box" id="services">
 		<div class="container">
 			<h2>Services</h2>
-			<p>Discover my porjects !</p>
+			<p>Discover my projects</p>
 		</div> 
 		<div class="justify">
 			<div class="s-card">
@@ -107,7 +107,7 @@
 					</div>
 					<div class="s-card-body">
 							<h3>Consulting</h3>
-							<p><b>Benchmarking XNode accelerator programs</b> success through the establishment of metrics. <b>Development of the innovation strategy</b> in order to maintain its competitivity in the Chinese ecosystem</p>
+							<p><b>Benchmarking XNode accelerator programs</b> success through the metrics establishement. <b>Development of the innovation strategy</b> in order to maintain its competitivity in the Chinese ecosystem</p>
 						
 					</div>
 				</a>	
